--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
-    <script src="LinearRegression_ROUGH.js"></script>
+    <script src="SupervisedLearningGradientDescent.js"></script>
   </head>
   <body>
   </body>
