--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
+		<script src="Neural/PercObj.js"></script>
     <script src="Neural/SPerc.js"></script>
   </head>
   <body>
