started ground up + added math.js

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
-		<script src="Neural/PercObj.js"></script>
-    <script src="Neural/SPerc.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.0.1/math.js"></script>
+		<script src="MLNeural/MLNeuralNet.js"></script>
+    <script src="MLNeural/MLNNCore.js"></script>
   </head>
   <body>
   </body>
