setting up for tensor flow

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.0.1/math.js"></script>
-		<script src="MLNeural/Point.js"></script>
-		<script src="MLNeural/MLNeuralNet.js"></script>
-    	<script src="MLNeural/MLNNCore.js"></script>
+		<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/5.0.1/math.js"></script>-->
+		<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.12.0"> </script>
+		<script src="TensorFlow/Core.js"></script>
+
   </head>
   <body>
   </body>
